2: changes to trigger action

--- a/.github/workflows/hands_on_2.yml
+++ b/.github/workflows/hands_on_2.yml
@@ -1,6 +1,8 @@
 name: Lint Python Code
 
-# Add the correct triggers for this workflow
+on: 
+  - push
+  - workflow_dispatch
 
 jobs:
   run_python_linter:
