--- a/.github/workflows/hands_on_2.yml
+++ b/.github/workflows/hands_on_2.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Install dependencies
         run: cd app && pip install -r requirements.txt
 
-      # Add steps that allow this workflow to run a linter on the Python code in the app directory
-
+      - name: Run linter
+        run: cd app && pylint *.py
