--- a/.github/workflows/hands_on_3.yml
+++ b/.github/workflows/hands_on_3.yml
@@ -6,7 +6,7 @@ on:
       city:
         description: Temperature in which city?
         default: Brussels
-        required: false
+        required: true
 
 jobs:
   print_temperature:
@@ -24,5 +24,4 @@ jobs:
         run: cd app && pip install -r requirements.txt
 
       - name: Run app and print temperature
-
-        run: cd app && python3 main.py {{ github.event.inputs.city }}
+        run: cd app && python3 main.py ${{ github.event.inputs.city }}
