--- a/.github/workflows/hands_on_4.yml
+++ b/.github/workflows/hands_on_4.yml
@@ -20,4 +20,6 @@ jobs:
 
       # Adjust this step such that it uses a secret API key that we've set up earlier.
       - name: Run app and print secret temperature
+        env:
+          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }} 
         run: cd app && python3 main.py Brussels
