--- a/.github/workflows/hands_on_5.yml
+++ b/.github/workflows/hands_on_5.yml
@@ -1,4 +1,13 @@
-              
-- name: Deploy GitHub Pages site            
-  uses: actions/deploy-pages@v4.0.3
+name: Deploy to GitHub pages
+
+on:
+  workflow_dispatch
+
+jobs:
+  deploy_github_pages:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Deploy GitHub Pages site            
+        uses: actions/deploy-pages@v4.0.3
 
