--- a/.github/workflows/hands_on_4.yml
+++ b/.github/workflows/hands_on_4.yml
@@ -2,6 +2,12 @@ name: Print Temperature Using Secret API Key
 
 on: 
   workflow_dispatch:
+    inputs:
+      city:
+        description: City to provide temperature for
+        default: Brussels
+        required: true
+    
 
 jobs:
   print_temperature:
@@ -22,4 +28,4 @@ jobs:
       - name: Run app and print secret temperature
         env:
           WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }} 
-        run: cd app && python3 main.py Brussels
+        run: cd app && python3 main.py ${{ github.event.inputs.city }}
